--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="row">
 						<div class="col-xs-3 col-sm-2">
 							<!-- logo of the page -->
-							<div class="logo"><a href="home.html"><img src="images/logo.png" alt="dot"></a></div>
+							<div class="logo"><a href="Bell不等式演示_HTML5 Canvas.html"><img src="images/logo.png" alt="dot"></a></div>
 							<!-- logo of the page end -->
 						</div>
 						<div class="col-xs-9 col-sm-10 nav-holder">
