--- a/Bell HTML5.html
+++ b/Bell HTML5.html
@@ -11,17 +11,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>Bell不等式演示_HTML5 Canvas</title>
+<title>Bell HTML5</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
-<script src="Bell不等式演示_HTML5 Canvas.js?1531989787016"></script>
+<script src="Bell HTML5.js?1532172011028"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
 	canvas = document.getElementById("canvas");
 	anim_container = document.getElementById("animation_container");
 	dom_overlay_container = document.getElementById("dom_overlay_container");
-	var comp=AdobeAn.getComposition("D92643871472A040B7F886ABAF33BAE4");
+	var comp=AdobeAn.getComposition("8C39BE9F9F51BB41BB36283CB6B917EE");
 	var lib=comp.getLibrary();
 	createjs.MotionGuidePlugin.install();
 	handleComplete({},comp);
@@ -30,7 +30,7 @@ function handleComplete(evt,comp) {
 	//This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
 	var lib=comp.getLibrary();
 	var ss=comp.getSpriteSheet();
-	exportRoot = new lib.Bell不等式演示_HTML5Canvas();
+	exportRoot = new lib.BellHTML5();
 	stage = new lib.Stage(canvas);	
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
