--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="row">
 						<div class="col-xs-3 col-sm-2">
 							<!-- logo of the page -->
-							<div class="logo"><a href="Bell不等式演示_HTML5 Canvas.html"><img src="images/logo.png" alt="dot"></a></div>
+							<div class="logo"><a href="Bell HTML5.html"><img src="images/logo.png" alt="dot"></a></div>
 							<!-- logo of the page end -->
 						</div>
 						<div class="col-xs-9 col-sm-10 nav-holder">
@@ -64,7 +64,7 @@
 								<!-- Collapse navbar collapse of the page -->
 								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 									<ul class="nav navbar-nav navbar-right">
-										<li><a href="home.html">Home</a></li>
+										<li><a href="index.html">Home</a></li>
 										<li><a href="archive.html">Archive</a></li>
 										<li><a href="single.html">Single</a></li>
 										<li><a href="contact-us.html">Contact</a></li>
