--- a/single-post.html
+++ b/single-post.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 
+<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+            src="song.mp3">
+      你的浏览器不支持audio标签
+</audio>
+
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
 </script>
