--- a/single-post.html
+++ b/single-post.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
-            src="song.mp3">
-      你的浏览器不支持audio标签
-</audio>
-
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML">
-</script>
-
+<div>
+ 	<object width="330" height="450" data="http://music.163.com/style/swf/widget.swf?sid=19742382&type=0&auto=0&width=310&height=430" type="application/x-shockwave-flash"></object>
+</div>
+		
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
 	TeX: {
