--- a/single-post.html
+++ b/single-post.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 
-<div>
- 	<object width="330" height="450" data="http://music.163.com/style/swf/widget.swf?sid=19742382&type=0&auto=0&width=310&height=430" type="application/x-shockwave-flash"></object>
-</div>
+<embed autostart="true" hidden="false" loop="true" src="http://ois5yh1xg.bkt.clouddn.com/%E5%8D%A2%E5%86%A0%E5%BB%B7%E4%B8%80%E7%94%9F%E6%89%80%E7%88%B1.mp3"></embed>
 		
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
