--- a/single-post.html
+++ b/single-post.html
@@ -197,7 +197,8 @@ sed diam nonummy nibh euismod tincid untnibh euismod tincidunt ut laoreet dolore
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=4956877&auto=1&height=66"></iframe>
+<audio controls="controls" playsinline="" webkit-playsinline="">  
+<source src="http://music.163.com/song/media/outer/url?id=4956877.mp3" type="audio/mpeg">  </audio>
 
 <p class=MsoNormal style='text-indent:21.0pt'>$$E = mc^2$$ 最近让我博士毕业的那篇文章终于正式发表了（杂志名称：<span
 lang=EN-US>nature partner journal quantum information</span>），鉴于文章很长但核心思想理解起来不难，我打算写一个面向公众的详细的中文介绍。文章把机器学习和量子力学（量子信息）进行交叉研究，但读懂中文介绍不要求读者掌握机器学习和量子力学的任何知识。只要求读者学过</p>
