--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 	<link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
+<audio id="bgaudio" loop="loop" src="song.mp3" controls="controls">
+    您的浏览器不支持audio标签
+</audio>
 	<div class="loader-holder">
 		<div class="loader">
 			<div class="side"></div>
