--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="css/colors.css">
 </head>
 <body>
-<audio id="bgaudio" loop="loop" src="song.mp3" controls="controls">
+<audio id="bgaudio" loop="loop" src="https://attachment.mc.0sm.com/node0/2019/12/85DF38B1693DBCB8-c62897fba8efab50.mp3" controls="controls">
     您的浏览器不支持audio标签
 </audio>
 	<div class="loader-holder">
