--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with github page autoplay="autoplay".</p>
-<audio autoplay="autoplay" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
+<audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
     您的浏览器不支持audio标签
 </audio>
 </body>
