--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <body>
 <h1>Hello World</h1>
+  body {background-color: #0033FF;}.font{color: #33CC00}
+   
 <p style="white-space: pre-wrap;">
 第一幕  
 地点：皇宫
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前。元帅则一身戎装，站在舞台最右侧。皇帝和元帅年纪偏大，皇后身旁还站着三位年轻的大臣。）
 
-【皇帝·曦】从今日起，丞相的一切政务，（右手指向皇后）一律由苹儿代为处理。
-【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！
 【皇帝·曦】从今日起，丞相的一切政务，（右手指向皇后）一律由苹儿代为处理。
 【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！
 【皇帝·曦】（轻轻点头）没有其他事的话，退朝。
