--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-  body {background-color: #0033FF;}.font{color: #33CC00}
+<head>
+<title>背景颜色</title>
+
+<style type="text/css">
+body{background-color:green;}
+div.pp{background-color:blue;}
+span.highlight{background-color:yellow}
+</style>
+
+</head>
    
 <p style="white-space: pre-wrap;">
 第一幕  
