--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <body>
 <head>
 <title>背景颜色</title>
-
 <style type="text/css">
-body{background-color:green;}
-div.pp{background-color:blue;}
-span.highlight{background-color:yellow}
+body {
+background-color: #0033FF;
+}.font{color: #33CC00} 
 </style>
 
 </head>
