--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <body>
 <head>
-<title>背景颜色</title>
+<title>天国</title>
 <style type="text/css">
 body {
-background-color: #0033FF;
-}.font{color: #33CC00} 
+background-color: black;
+}.font{color: yellow} 
 </style>
 
 </head>
