--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ background-color: black;
 
 </head>
    
-<p style="white-space: pre-wrap;">
+<p style="white-space: pre-wrap;font-family:times;color:yellow">
 第一幕  
 地点：皇宫
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前。元帅则一身戎装，站在舞台最右侧。皇帝和元帅年纪偏大，皇后身旁还站着三位年轻的大臣。）
