--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@ background-color: black;
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前。元帅则一身戎装，站在舞台最右侧。皇帝和元帅年纪偏大，皇后身旁还站着三位年轻的大臣。）
 
 【皇帝·曦】从今日起，丞相的一切政务，（右手指向皇后）一律由苹儿代为处理。
-【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！
-【皇帝·曦】（轻轻点头）没有其他事的话，退朝。
-【皇后·苹】（站起身）啊对了，皇上，前几天那几个被戴上紧箍咒的叛徒……
-【皇帝·曦】怎么了？
-【皇后·苹】全部清理掉了。
-【皇帝·曦】（闭上眼，沉思片刻后）明白了，都退下吧。
-【皇后·苹】臣妾告退。
-   
+【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！  
 </p>
+   
+<button id="btn">点我进入下一页</button>
+
+<script>
+document.getElementById("btn").onclick = function () {
+  // 点按钮后弹出一个文字，你可以尝试改变文字内容
+window.open("https://inspurer.github.io/");  
+}
+</script>
+   
+   
 <audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
     您的浏览器不支持audio标签
 </audio>
