--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@ background-color: black;
 【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！  
 </p>
    
-<button id="btn">点我进入下一页</button>
-
-<script>
-document.getElementById("btn").onclick = function () {
-  // 点按钮后弹出一个文字，你可以尝试改变文字内容
-window.open("https://inspurer.github.io/");  
-}
-</script>
+<div>
+   <button class="prev" >上一页</button>
+   <button class="next" >下一页</button>
+</div>
+<div class="item active">
+   <p style="white-space: pre-wrap;font-family:times>
+             测试换页
+             xxx
+             xxxx
+   </p>
+</div>
    
    
 <audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
