--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ background-color: black;
    <button class="next" >下一页</button>
 </div>
 <div class="item active">
-   <p style="white-space: pre-wrap;font-family:times>
+   <p style="white-space: pre-wrap;font-family:times">
              测试换页
              xxx
              xxxx
    </p>
 </div>
 <div class="item">
-   <p style="white-space: pre-wrap;font-family:times>
+   <p style="white-space: pre-wrap;font-family:times">
              第二页
              xxx
              xxxx
