--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ background-color: black;
 </p>
    
 <div>
-   <button class="prev" >上一页</button>
-   <button class="next" >下一页</button>
+   <button class="prev" >往上一页</button>
+   <button class="next" >往下一页</button>
 </div>
 <div class="item active">
    <p style="white-space: pre-wrap;font-family:times">
