--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <body>
 <head>
 <title>天国</title>
-<style type="text/css">
+<!-- <style type="text/css">
 body {
 background-color: black;
 }.font{color: yellow} 
+</style> -->
+   
+<style>
+   .item {
+      display: none;
+      overflow: hidden;
+      position: relative;
+   }
+   .item.active {
+      display: block;
+   }
 </style>
 
 </head>
