--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@ background-color: black;
    <button class="next" >往下一页</button>
 </div>
 <div class="item active">
-   <p style="white-space: pre-wrap;font-family:times">
+   <p style="white-space: pre-wrap;font-family:times;color:yellow">
              测试换页
              xxx
              xxxx
    </p>
 </div>
 <div class="item">
-   <p style="white-space: pre-wrap;font-family:times">
+   <p style="white-space: pre-wrap;font-family:times;color:yellow">
              第二页
              xxx
              xxxx
@@ -82,8 +82,8 @@ background-color: black;
 </script>
    
    
-<audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
+<!-- <audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
     您的浏览器不支持audio标签
-</audio>
+</audio> -->
 </body>
 </html>
