--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ background-color: black;
 </style> -->
    
 <style>
+	body {
+	background-color: black;
+	}
    .item {
       display: none;
       overflow: hidden;
@@ -18,38 +21,106 @@ background-color: black;
    .item.active {
       display: block;
    }
+   .paragraph{
+	  white-space: pre-wrap;
+	  font-family:times;
+	  color:yellow;
+   }
 </style>
 
 </head>
-   
-<p style="white-space: pre-wrap;font-family:times;color:yellow">
-第一幕  
-地点：皇宫
-（舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前。元帅则一身戎装，站在舞台最右侧。皇帝和元帅年纪偏大，皇后身旁还站着三位年轻的大臣。）
 
-【皇帝·曦】从今日起，丞相的一切政务，（右手指向皇后）一律由苹儿代为处理。
-【皇后·苹】（浮现一抹笑容，单膝跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！  
-</p>
-   
 <div>
-   <button class="prev" >往上一页</button>
-   <button class="next" >往下一页</button>
+	<audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
+	您的浏览器不支持audio标签
+</audio>
 </div>
+
+<a name="top" id="top"></a>
+
+<button class="prev" >上一页</button>
+
 <div class="item active">
-   <p style="white-space: pre-wrap;font-family:times;color:yellow">
-             测试换页
-             xxx
-             xxxx
-   </p>
+   <p class="paragraph">
+第一幕  地点：皇宫
+（舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅的年龄偏大。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前，身边还站着另外三位贵族。元帅则一身戎装，站在最后，也就是舞台最右侧。）
+
+【皇帝·曦】从今日起，丞相的一切政务，一律由苹儿代为处理。
+【皇后·苹】（欣喜，跪地）谢主隆恩。臣妾定当不辱使命，为帝国……不，为伟大的天国王朝鞠躬尽瘁！
+【皇帝·曦】没有其他事的话，退朝。
+【皇后·苹】（站起身）啊对了，皇上，前几天说的那几个异端分子……
+【皇帝·曦】怎么了？
+【皇后·苹】臣妾已派人抄了他们全家，所有人全部戴上紧箍咒，现在，大概正在接受人民的审判吧。
+【皇帝·曦】（闭眼沉思片刻后）明白了，都退下吧。
+【皇后·苹】臣妾告退。
+（皇后转身后朝舞台右侧走去，几名贵族紧随其后。只有元帅站在原地不动。皇后瞪了元帅一眼，小声“哼”了一声后走下舞台。元帅上前几步，走到皇帝面前。）
+【皇帝·曦】沧白兄，还有何事？
+【元帅·沧白】陛下，苹皇后的性子您最了解，让她来当这个代理丞相，恐怕……
+【皇帝·曦】不必多言。朕决议如此。
+【元帅·沧白】后宫干政历来是大忌，陛下为何反其道而行之？
+【皇帝·曦】军人干政就不是大忌了？沧白元帅追随朕多年，朕不按套路出的牌，你还见得少吗？没有人比苹儿更懂朕！（用右手指着元帅）你们，都是旧世界的人，不敢反对朕，就去针对她。要是哪天，朕不在了，还不知道你们会对苹儿怎么样！咳…咳咳（不停地咳嗽）
+【元帅·沧白】陛下息怒，注意龙体。
+【皇帝·曦】（抬头斜视上空）这是一个被耶稣诅咒的世界，在毁灭与重生中涅槃的世界。（低头看向元帅，若有所思地）说起来，今年又是第13年了，这相传每隔13年发生一回的诅咒，究竟是什么呢？
+【元帅·沧白】耶稣的诅咒…么？难道，陛下让皇后代行丞相职责，是因为……
+【皇帝·曦】是因为朕身边只剩苹儿了！是因为朕的天国，正一步步走向堕落！朕必须战斗到底，直至新世界的上帝，在祂认为合适的时候，拿出祂的一切力量，来拯救和解放这个旧的世界！
+【元帅·沧白】那些人，都是天国的栋梁，是陛下的左臂右膀。只是因为说了几句不太中听的话，就被扣上紧箍咒。那些人最后是什么下场？陛下可知，有多少无辜的人被逼得自杀？有人被割破喉咙，有人被折断四肢，有人被……
+【皇帝·曦】（打断元帅）沧白兄，你当真以为，苹儿做的那些事，朕会毫不知情？
+【元帅·沧白】既然如此，陛下为何听之任之?
+【皇帝·曦】的确，他们都是昔日一起并肩战斗的同伴。可是为什么，天国尚未建成，他们就腐化堕落，自甘沉沦？
+【元帅·沧白】若是他们违反了法律，应当依律处理，但…
+【皇帝·曦】法律？那种东西，只会沦为权贵阶层奴役百姓的工具！可朕要的，是一个人人平等，没有压迫和剥削的人间天国！
+【元帅·沧白】然而这个世界，怎么可能人人平等？
+【皇帝·曦】你说得不错。权力和利益，总是不可避免地往少数人手里集中。所以，从一开始就必须由天国来分配财富和资源，只有这样，才能从根本上保证人与人的平等。可是（突然变得愤怒），朕身边那群家伙，不念苍生疾苦，只图此生荣华！他们一而再，再而三地阳奉阴违。你说，这些天国的叛徒，该杀不该杀？
+【元帅·沧白】（无奈地）陛下息怒。
+【皇帝·曦】朕不想看到，天国像过去的帝国一样，一步一步陷入崩溃。所以，与其被动等待耶稣的诅咒横行世间，不如由我们来掌握主导权。在朕的号召下，让处于金字塔底端的老百姓，拿起手中的武器，炮轰这腐朽没落的朝廷。
+【元帅·沧白】这就是陛下逆天改命的方法：用人的诅咒，去打破神的诅咒。
+【皇帝·曦】这总结精辟！就让这些天国王朝的异端，为富不仁的社会精英们，在人民的怒火下，戴上紧箍咒活一辈子吧！
+【元帅·沧白】陛下，其实老臣今日前来，还有一事禀报。
+【皇帝·曦】何事？
+【元帅·沧白】丞相…不，是前丞相大人，今早突然病情加重。恐怕，快不行了。
+【皇帝·曦】（沉默片刻后，冷淡地）知道了。
+【元帅·沧白】陛下何不过去探望一下？
+【皇帝·曦】（摇头）有太子在，足矣。
+（落幕）
+</p>
 </div>
 <div class="item">
-   <p style="white-space: pre-wrap;font-family:times;color:yellow">
-             第二页
-             xxx
-             xxxx
+   <p class="paragraph">
+第二幕  地点：丞相府
+（舞台上从左到右依次是太子·紫英，丞相·国光。丞相躺在床上，身体虚弱，太子朝丞相走去。）
+【丞相·国光】殿下……（看见太子朝自己走来，想要下床行礼）
+【太子·紫英】先生免礼。
+【丞相·国光】（不再试图下床，而是坐在床上，脸朝向太子一侧）谢太子殿下。（停顿片刻后，语速缓慢地）都说老夫是殿下的守护神。想不到，在此生的最后，却要让殿下来守护我这把老骨头啊。
+【太子·紫英】先生千万别这么说，只要安心养病，很快就能好起来的。
+【丞相·国光】（摇摇头）老夫的病，老夫心里有数，这辈子，也没啥好遗憾的。只是，被人稀里糊涂赶下台…罢了，人生一场虚空大梦，韶华白首，不过转瞬。惟有天道恒在，往复循环，不曾更改。
+【太子·紫英】先生的冤，天下人皆知。您替无数人摘掉了紧箍咒，到头来，自己却被扣了一顶，真是造化弄人。
+【丞相·国光】都说，被扣上紧箍咒的人，不再受法律保护，人人得而诛之。老夫这一生，没想到能当上丞相，更没想到，被人扣上紧箍咒，逼下了台，居然能活到今天，而且名声还能这么好。
+【太子·紫英】因为先生，是为了救那些孩子，才被陷害至此。即使父皇，还有朝中元老都在非难先生，本宫也会无条件站在先生这边。只是，以您的性子，那时候明明责任不在您，为何要当着文武百官的面，违心认罪？
+【丞相·国光】（沉默片刻，轻叹一声）老夫这把年纪，死不足惜，可老夫还有妻子和孩子，不能连累了他们。（仰天长叹）想不到，铁骨铮铮了半辈子，到头来，还是怂了一回啊。
+【太子·紫英】紧箍咒，这凌驾于法律之上的特权，为祸四方的毒瘤，为何至今还存在于世？
+【丞相·国光】殿下要明白，所谓紧箍咒，说到底，只是皇帝用来清除异己，打击政敌的工具而已。三十年前，皇帝不顾群臣反对，一意孤行，结果弄得天下哀鸿遍野，百姓食不果腹。朝堂之上，是各怀鬼胎的贵族，朝野之外，是对朝廷不满的平民。所以，煽动不明真相的平民，打击挑战皇权的贵族，就成了一箭双雕之计。
+【太子·紫英】所以，百姓因皇帝为民除害而感恩戴德，贵族因害怕紧箍咒对皇帝唯唯诺诺。
+【丞相·国光】（点点头）从那以后，不只是皇帝，上自贵族大臣，下自平民百姓，都在利用紧箍咒自相残杀。太多的无辜者，就这样被卷入其中。
+【太子·紫英】如果说，父皇要救的是国家，那先生想救的，则是国家的人，普普通通的人。
+【丞相·国光】对于这一点，殿下也是一样的吧。恕老夫直言，殿下比老夫更懂得如何保护自己，但殿下太过善良，这尔虞我诈的宫廷，真不是殿下应该呆的地方。
+【太子·紫英】（叹气）这太子之位，本就非我所愿，但毕竟皇命难违。何况，要是皇位真被二皇子抢了去，后果不堪设想。
+【丞相·国光】皇上已将国事尽数托付于殿下，还望殿下珍惜这来之不易的机会，不要让历史的悲剧重演。
+【太子·紫英】我们的国家，没有历史，只有轮回。每一次轮回的破灭，都伴随着无数人的鲜血。相传…是从什么时候开始呢，这个世界，每隔13年必有一劫。倘若处置不当，轻则血流成河，重则改朝换代。
+【丞相·国光】今年，又到了第13年了。
+【太子·紫英】究竟要怎样做，才能跳出这万劫不复的深渊？
+【丞相·国光】曾几何时，在那个生死存亡的时刻，一位勇士振臂一呼，终帝制而起共和。那时很多人相信，这就是轮回的终结。
+【太子·紫英】共和？
+【丞相·国光】可是，在这个只能靠拳头说话的世界，与恶龙缠斗过久的勇士，终究还是变成了恶龙。如今的天国，只有成为军队的元首，才能登上权力的巅峰。明明披着共和的外衣，却可以通过委派，甚至兼任执政官，保民官，监察官等要职，成为事实上的，也就是我们所说的——皇帝。然后，皇帝可以把自己信任的人收为养子，指定其中之一为继承人。
+【太子·紫英】古老的专制主义黑洞，吞噬了通往共和的文明之光。所以，要摆脱此等魔咒，跳出这进化的死循环，必须借助其它文明的力量……
+【丞相·国光】无论殿下，想用怎样的力量跳出这诅咒的轮回，请记住一点，绝对，不能仅仅依靠个人的权威。法律、教育和文化，这才是，真正可以依靠的力量。
+（语速逐渐变慢）余一生所求，不过穷尽毕生之力，以复兴昔日共和之荣光，惜而天意弄人，终究事与愿违，如之奈何？（说完，缓缓合上了双眼）
+【太子·紫英】（怆然）那就让本宫，来继承您的遗愿。
+（落幕）
    </p>
 </div>
-   
+
+<button class="next" >下一页</button>
+
 <script type="text/javascript">
    //封装函数、图片显示的部分、传入获取到的div，和被点击的序号
    function toggle(eles, active) {
@@ -58,16 +129,23 @@ background-color: black;
       }
       eles[active].className = "item active";//再让被点击的序号对应的div 显示
    }
+	
    //获取按键和div
    var prev = document.getElementsByClassName("prev");
    var next = document.getElementsByClassName("next");
    var nowPage = 0; //定义当前页，默认值为0；
    var pageNum = 2; //总页数
    var aIem = document.getElementsByClassName("item");
+   var audio = document.getElementsByTagName('audio')[0];
    
    //下一页
    next[0].onclick = function () {			
-         nowPage++;					
+         nowPage++;
+		 audio.src = "song.mp3";
+         audio.paused && (audio.play())
+<!-- 		 if(nowPage == pageNum){
+			window.location.replace('index2.html')		
+		}	 -->	 
          nowPage %= pageNum;
          toggle(aIem,nowPage);
    }
@@ -80,10 +158,6 @@ background-color: black;
       toggle(aIem,nowPage);				
    }
 </script>
-   
-   
-<!-- <audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
-    您的浏览器不支持audio标签
-</audio> -->
+
 </body>
 </html>
