--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@ background-color: black;
    //下一页
    next[0].onclick = function () {			
          nowPage++;
-		 audio.src = "song.mp3";
-         audio.paused && (audio.play())
+	 console.log(audio);
+	 //audio.src = "song.mp3";
+         //audio.paused && (audio.play());
 <!-- 		 if(nowPage == pageNum){
 			window.location.replace('index2.html')		
 		}	 -->	 
