--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ background-color: black;
    var next = document.getElementsByClassName("next");
    var nowPage = 0; //定义当前页，默认值为0；
    var pageNum = 2; //总页数
+   var aIem = document.getElementsByClassName("item");
    //var audio = document.getElementsByTagName('audio')[0];
    
    //下一页
