--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ background-color: black;
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅的年龄偏大。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前，身边还站着另外三位贵族。元帅则一身戎装，站在最后，也就是舞台最右侧。）
 
 【皇帝·曦】从今日起，丞相的一切政务，一律由苹儿代为处理。
-	   xxxxxxxx
+	  22222222
 
 （落幕）
 </p>
@@ -86,7 +86,7 @@ background-color: black;
 
 <button class="next" >下一页</button>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
    //封装函数、图片显示的部分、传入获取到的div，和被点击的序号
    function toggle(eles, active) {
       for(var i = eles.length; i--;) {
@@ -123,7 +123,7 @@ background-color: black;
       }
       toggle(aIem,nowPage);				
    }
-</script>
+</script> -->
 
 </body>
 </html>
