--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ background-color: black;
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅的年龄偏大。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前，身边还站着另外三位贵族。元帅则一身戎装，站在最后，也就是舞台最右侧。）
 
 【皇帝·曦】从今日起，丞相的一切政务，一律由苹儿代为处理。
-	  3333333333
+	  1111111
 
 （落幕）
 </p>
@@ -101,14 +101,14 @@ background-color: black;
    var nowPage = 0; //定义当前页，默认值为0；
    var pageNum = 2; //总页数
    var aIem = document.getElementsByClassName("item");
-   var audio = document.getElementsByTagName('audio')[0];
+   //var audio = document.getElementsByTagName('audio')[0];
    
    //下一页
    next[0].onclick = function () {			
          nowPage++;
 	 console.log(audio);
-	 audio.src = "song.mp3";
-         audio.paused && (audio.play());	 
+	 //audio.src = "song.mp3";
+         //audio.paused && (audio.play());	 
          nowPage %= pageNum;
          toggle(aIem,nowPage);
    }
