--- a/index.html
+++ b/index.html
@@ -3,88 +3,15 @@
 <body>
 <head>
 <title>天国</title>
-<!-- <style type="text/css">
-body {
-background-color: black;
-}.font{color: yellow} 
-</style> -->
-   
-<style>
-	body {
-	background-color: black;
-	}
-   .item {
-      display: none;
-      overflow: hidden;
-      position: relative;
-   }
-   .item.active {
-      display: block;
-   }
-   .paragraph{
-	  white-space: pre-wrap;
-	  font-family:times;
-	  color:yellow;
-   }
-</style>
-
 </head>
 
-<div>
-	<audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">
-		您的浏览器不支持audio标签
-	</audio>
-</div>
+<audio preload="auto" id="bgaudio" loop="loop" src="song.mp3" controls="controls">\
+	您的浏览器不支持audio标签
+</audio>
 	
-<button class="prev" >上一页</button>
-
-<div class="item active">
-   <p class="paragraph">
+<p>
 第一幕  地点：皇宫
-（舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅的年龄偏大。皇帝身着皇袍，头戴皇冠，坐于龙椅之上。皇后站在皇帝面前，身边还站着另外三位贵族。元帅则一身戎装，站在最后，也就是舞台最右侧。）
-
-【皇帝·曦】从今日起，丞相的一切政务，一律由苹儿代为处理。
-	 666666666666
-
-（落幕）
+（舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅的年龄偏大。皇帝身着皇袍，头
 </p>
-</div>
-<div class="item">
-   <p class="paragraph">
-第二幕  地点：丞相府
-（舞台上从左到右依次是太子·紫英，丞相·国光。丞相躺在床上，身体虚弱，太子朝丞相走去。）
-【丞相·国光】殿下……（看见太子朝自己走来，想要下床行礼）
-【太子·紫英】先生免礼。
-【丞相·国光】（不再试图下床，而是坐在床上，脸朝向太子一侧）谢太子殿下。（停顿片刻后，语速缓慢地）都说老夫是殿下的守护神。想不到，在此生的最后，却要让殿下来守护我这把老骨头啊。
-【太子·紫英】先生千万别这么说，只要安心养病，很快就能好起来的。
-【丞相·国光】（摇摇头）老夫的病，老夫心里有数，这辈子，也没啥好遗憾的。只是，被人稀里糊涂赶下台…罢了，人生一场虚空大梦，韶华白首，不过转瞬。惟有天道恒在，往复循环，不曾更改。
-【太子·紫英】先生的冤，天下人皆知。您替无数人摘掉了紧箍咒，到头来，自己却被扣了一顶，真是造化弄人。
-【丞相·国光】都说，被扣上紧箍咒的人，不再受法律保护，人人得而诛之。老夫这一生，没想到能当上丞相，更没想到，被人扣上紧箍咒，逼下了台，居然能活到今天，而且名声还能这么好。
-【太子·紫英】因为先生，是为了救那些孩子，才被陷害至此。即使父皇，还有朝中元老都在非难先生，本宫也会无条件站在先生这边。只是，以您的性子，那时候明明责任不在您，为何要当着文武百官的面，违心认罪？
-【丞相·国光】（沉默片刻，轻叹一声）老夫这把年纪，死不足惜，可老夫还有妻子和孩子，不能连累了他们。（仰天长叹）想不到，铁骨铮铮了半辈子，到头来，还是怂了一回啊。
-【太子·紫英】紧箍咒，这凌驾于法律之上的特权，为祸四方的毒瘤，为何至今还存在于世？
-【丞相·国光】殿下要明白，所谓紧箍咒，说到底，只是皇帝用来清除异己，打击政敌的工具而已。三十年前，皇帝不顾群臣反对，一意孤行，结果弄得天下哀鸿遍野，百姓食不果腹。朝堂之上，是各怀鬼胎的贵族，朝野之外，是对朝廷不满的平民。所以，煽动不明真相的平民，打击挑战皇权的贵族，就成了一箭双雕之计。
-【太子·紫英】所以，百姓因皇帝为民除害而感恩戴德，贵族因害怕紧箍咒对皇帝唯唯诺诺。
-【丞相·国光】（点点头）从那以后，不只是皇帝，上自贵族大臣，下自平民百姓，都在利用紧箍咒自相残杀。太多的无辜者，就这样被卷入其中。
-【太子·紫英】如果说，父皇要救的是国家，那先生想救的，则是国家的人，普普通通的人。
-【丞相·国光】对于这一点，殿下也是一样的吧。恕老夫直言，殿下比老夫更懂得如何保护自己，但殿下太过善良，这尔虞我诈的宫廷，真不是殿下应该呆的地方。
-【太子·紫英】（叹气）这太子之位，本就非我所愿，但毕竟皇命难违。何况，要是皇位真被二皇子抢了去，后果不堪设想。
-【丞相·国光】皇上已将国事尽数托付于殿下，还望殿下珍惜这来之不易的机会，不要让历史的悲剧重演。
-【太子·紫英】我们的国家，没有历史，只有轮回。每一次轮回的破灭，都伴随着无数人的鲜血。相传…是从什么时候开始呢，这个世界，每隔13年必有一劫。倘若处置不当，轻则血流成河，重则改朝换代。
-【丞相·国光】今年，又到了第13年了。
-【太子·紫英】究竟要怎样做，才能跳出这万劫不复的深渊？
-【丞相·国光】曾几何时，在那个生死存亡的时刻，一位勇士振臂一呼，终帝制而起共和。那时很多人相信，这就是轮回的终结。
-【太子·紫英】共和？
-【丞相·国光】可是，在这个只能靠拳头说话的世界，与恶龙缠斗过久的勇士，终究还是变成了恶龙。如今的天国，只有成为军队的元首，才能登上权力的巅峰。明明披着共和的外衣，却可以通过委派，甚至兼任执政官，保民官，监察官等要职，成为事实上的，也就是我们所说的——皇帝。然后，皇帝可以把自己信任的人收为养子，指定其中之一为继承人。
-【太子·紫英】古老的专制主义黑洞，吞噬了通往共和的文明之光。所以，要摆脱此等魔咒，跳出这进化的死循环，必须借助其它文明的力量……
-【丞相·国光】无论殿下，想用怎样的力量跳出这诅咒的轮回，请记住一点，绝对，不能仅仅依靠个人的权威。法律、教育和文化，这才是，真正可以依靠的力量。
-（语速逐渐变慢）余一生所求，不过穷尽毕生之力，以复兴昔日共和之荣光，惜而天意弄人，终究事与愿违，如之奈何？（说完，缓缓合上了双眼）
-【太子·紫英】（怆然）那就让本宫，来继承您的遗愿。
-（落幕）
-   </p>
-</div>
-
-<button class="next" >下一页</button>
-
 </body>
 </html>
