--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 讲述的是一个在历史中无限轮回的国家，
 
-皇帝、丞相、太子、学生们都在用自己的方式，试图跳出这个轮回的怪圈。
+皇帝、丞相、太子、元帅和学生们，都在用自己的方式，试图跳出这个轮回的怪圈。
 
 这个故事很挑读者，如果对这一主题不感兴趣可能会觉得很枯燥吧。。。
 
