导读第一章合并

--- a/index.html
+++ b/index.html
@@ -31,25 +31,19 @@
 <div class="item active">
 <p class="paragraph">
 
-<font color="red">导读</font>
+<font color="red">写在前面</font>
 
-这是一个关于“轮回”的故事，约1.7万字。
+这是一个关于“轮回”的故事，约1.7万字；
 
-讲述的是一个在历史中无限轮回的国家，
+讲述的是一个在历史中无限“轮回”的国家；
 
-皇帝、丞相、太子、元帅和学生们，都在用自己的方式，试图跳出这个轮回的怪圈。
+皇帝、丞相、太子、元帅和学生们，都在用自己的方式，试图跳出这个轮回的怪圈；
 
-这个故事很挑读者，如果对这一主题不感兴趣可能会觉得很枯燥吧。。。
+本故事以话剧的形式呈现，且特别挑读者；
 
-</p>
+如果读者对这一主题对不上电波，可能会觉得很枯燥吧。。。不过还是希望能有人认真看到最后。
 
 
-</div>
-
-<div class="item">
-
-<p class="paragraph">
-    
 <font color="red">第一幕</font>
 
 ……天国的秘密，只叫你们知道，不叫他们知道。
