--- a/index.html
+++ b/index.html
@@ -33,15 +33,28 @@
 
 <font color="red">写在前面</font>
 
-这是一个关于“轮回”的故事，约1.7万字；
+本文约1.7万字
 
-讲述的是一个在历史中无限“轮回”的国家；
+讲述的是一个在历史中无限“轮回”的国家
 
-皇帝、丞相、太子、元帅和学生们，都在用自己的方式，试图跳出这个轮回的怪圈；
+这个国家每隔13年，就会发生一次“耶稣的诅咒”
 
-本故事以话剧的形式呈现，且特别挑读者；
+处理得当可以平安度过
 
-如果读者对这一主题对不上电波，可能会觉得很枯燥吧。。。不过还是希望能有人认真看到最后。
+反之，则会引发流血事件，甚至王朝更替的“轮回”
+
+理想主义者们，对“轮回”有着不同的理解
+
+他们都在试图用自己的信念，试图跳出这个轮回的怪圈
+
+【皇帝·曦】选择了“平等”，以“天国”为信仰，试图用集权化这只“看得见的手”逆天改命，阻止财富流向少数人的口袋
+
+【太子·紫英】选择了“自由”，以“共和”为目标，试图用法律、教育和文化，冲破古老帝国的集权化黑洞
+
+两派人马似乎不可避免地会爆发冲突，可就在此时，第三股力量登上了舞台……
+
+注：这其实是一个自带“演员表”的剧本，虽然没到公开的时候，但看完全文后可以猜
+
 
 
 <font color="red">第一幕</font>
@@ -54,7 +67,7 @@
 
 <p class="paragraph">
 
-地点：帝都宫殿内
+地点：帝都·大殿内
 
 （舞台上从左到右依次是皇帝·曦，皇后·苹，元帅·沧白。皇帝和元帅已是花甲之年。皇帝坐在龙椅上。皇后站在皇帝面前，身边还站着三位男性贵族。元帅站在舞台右侧。）
 
@@ -88,9 +101,9 @@
 
 没有人比苹儿更理解朕！（用颤抖的右手指着元帅）你…你们，都是旧世界的人，不敢反对朕，就去针对她。
 
-要是哪天朕不在了，还不知道你们会对苹儿怎么样！咳…咳咳（不停地咳嗽）
+朕（咳嗽）……已时日无多。要是哪天…朕不在了，还不知道…你们会对苹儿怎么样……
 
-【元帅·沧白】（诚惶诚恐）陛下息怒……
+【元帅·沧白】（诚惶诚恐）陛下息怒。
 
 【皇帝·曦】这是一个被耶稣诅咒的世界。苹儿为了朕，已经同这个世界决裂。（沉默片刻后）说起来，今年是RC历65年了吧？又到了…这个13倍数的年份了。
 
@@ -174,13 +187,13 @@
 
 （舞台上从左到右依次是太子·紫英，丞相·国光。丞相躺在床上，太子朝丞相走去。）
 
-【丞相·国光】殿下……（看见太子朝自己走来，想要下床行礼）
+【丞相·国光】殿下……（看见太子朝自己走来，想要下床）
 
-【太子·紫英】先生免礼。
+【太子·紫英】（赶紧）先生身体不适，不必起身了。
 
 【丞相·国光】（坐在床上，面朝太子）谢…太子殿下。
 
-都说老夫是殿下的守护神，想不到，在此生的最后，却要让殿下，来守护我这把老骨头。
+都说，老夫是殿下的守护神。 想不到，在此生的最后，却要让殿下，来守护我这把老骨头。
 
 【太子·紫英】（坐在一旁的椅子上）先生千万别这么说，只要安心养病，很快就能好起来的。
 
@@ -256,11 +269,13 @@
 
 成为事实上的，也就是我们所说的——皇帝。
 
-（注：本文的“皇帝”更接近英语emperor，更确切地说是拉丁语imperator的原始含义，与中文标准意义上的“皇帝”并不完全相同）
+（注：本作的“皇帝”更接近英语emperor，更确切地说是拉丁语imperator的原始含义，可以理解为“掌握军权的最高权威者”。
+
+这与中文标准意义上的“皇帝”并不完全相同。另外，本作出现的人物之间并无血缘关系。）
 
 【太子·紫英】 所以，这就是……天国王朝的真相么？古老的专制集权黑洞，吞噬了通往共和之路的文明之光。
 
-看来，要摆脱此等魔咒，跳出这帝制的死循环，需要借助……其它文明的力量。
+看来，要摆脱此等魔咒，跳出这帝制的死循环，或许需要借助……其它文明的力量。
 
 【丞相·国光】（语速逐渐变慢）无论殿下，想用怎样的力量，跳出这诅咒的轮回，
 
@@ -293,7 +308,7 @@
 
 后来变成抗议和游行，现在又正在天国广场聚众示威。
 
-他们打着悼念丞相的幌子，四处散发传单，妄议朝纲，说我们贵族的坏话，还说让太子来主持公道。
+他们打着悼念丞相的幌子，四处散发传单，妄议朝纲，说我们几个贵族的坏话，还说让太子来主持公道。
 
 他们喊的口号都是在指桑骂槐。其中有不少，分明是在诋毁皇后娘娘。
 
@@ -307,23 +322,25 @@
 
 【贵族·甲乙丙】娘娘…
 
-【皇后·苹】皇上，是天国的上帝，唯一的主宰。而我们呢？我们不过是幽灵，在天国深处徘徊的幽灵！
+【皇后·苹】曦皇，是天国的上帝，唯一的主宰。而我们呢？我们不过是幽灵，在天国深处徘徊的幽灵！
 
 皇上的双手如此圣洁，绝不能让它染上人间的鲜血。神明无法实施的惩罚，只有交给幽灵来执行。
 
 如今的天国广场，人民的怒火，终于烧到了我们的头上。这就是报应呐，报应！
 
-【贵族·乙】说起来，今年是5 × 13 = 65年，第5个轮回之年。这一次的轮回，终于轮到我们受难了么。我们的形象，在未来的史书里，大概会很糟糕吧。皇上随时可以把我们抛弃，以平息天下人的怒火。
+【贵族·乙】说起来，今年是5 × 13 = 65年，第5个轮回之年。这一次的轮回，终于轮到我们受难了么。
+
+我们的形象，在未来的史书里，大概会很糟糕吧。皇上随时可以把我们抛弃，以平息天下人的怒火。
 
 【贵族·丙】不，不对！我们做错了什么？那些因我们而死的，都是叛徒，是天国的异端分子！我们只是执行皇上的命令而已不是吗？
 
-【贵族·甲】各位且别激动。根据我的调查，这一次的骚乱，也许皇上本人事先并不知情。 
+【贵族·甲】大家先别急着沮丧。根据我的调查，这一次的骚乱，也许皇上本人事先并不知情。 
 
 事实上，从他们的口号来看，与其说是在诋毁皇后娘娘和我们，不如说……是在变着法反对曦皇陛下本人的政策。
 
 甚至有“请皇上退位，让太子赶紧登基”这样的口号出现。你们觉得……皇上听了会怎么想？
 
-【皇后·苹】（来了兴趣）哦？此话当真？这就有点意思了。
+【皇后·苹】（转悲为喜）哦？此话当真？
 
 【贵族·甲】或许，我们还可以将计就计，和第二皇子联手除掉太子。
 
@@ -449,7 +466,13 @@
 
 【学生·甲】（举手）我也加入！
 
-（其他学生此时也不再犹豫，也纷纷举起手表示加入。此时舞台灯光变暗，同学们准备起绝食的装束，然后在广场上静坐示威。 此前纪念丞相的横幅被撤下。学生们在头上缠上白色布条。大多数布条上写着“绝食”，还有些布条上写着“拼死一搏”、“腐败的掘墓人”之类的字样。另有一些绝食的学生绑着腰带，上面写着：“衣带渐宽终不悔，为民消得人憔悴”、“为了尊严与自立、我们只有以死抗争”……随后包括女学生·蕾在内，不断有人因饥饿而倒下，救护车的鸣笛声响起，女学生·蕾和晕倒的同学被送离舞台。
+（其他学生此时也不再犹豫，也纷纷举起手表示加入。此时舞台灯光变暗，同学们准备起绝食的装束，然后在广场上静坐示威。 此前纪念丞相的横幅被撤下。
+
+学生们在头上缠上白色布条。大多数布条上写着“绝食”，还有些布条上写着“拼死一搏”、“腐败的掘墓人”之类的字样。
+
+另有一些绝食的学生绑着腰带，上面写着：“衣带渐宽终不悔，为民消得人憔悴”、“为了尊严与自立、我们只有以死抗争”……
+
+随后包括女学生·蕾在内，不断有人因饥饿而倒下，救护车的鸣笛声响起，女学生·蕾和晕倒的同学被送离舞台。
 
 此时幕后突然传来一声：“太子驾到——”，舞台灯光重新亮起）
 
@@ -514,7 +537,7 @@
 
 
 <font color="purple">第五幕</font>
-地点：帝都宫殿内
+地点：帝都·大殿内
 
 （太子·紫英从舞台右侧匆忙往左走去，第二皇子·木挡在面前）
 
@@ -538,7 +561,7 @@
 
 【太子·紫英 & 第二皇子·木】（齐声）皇上！
 
-（此时从舞台左侧走上台的是：头戴皇冠，身着皇袍，相貌与第一幕中的皇帝·曦完全不同的……另一位皇帝，名为“夜”。）
+（此时从舞台左侧走上台的是：头戴皇冠，身着皇袍，相貌与<font color="red">第一幕</font>中的皇帝·曦完全不同的……另一位皇帝，名为“夜”。）
 
 【皇帝·夜】（对着第二皇子·木厉声喝斥）还不快给紫英道歉！？
 
@@ -550,15 +573,19 @@
 
 【皇帝·夜】你们还记得今年的年份是哪一年，以及它有着怎样的意义吧？
 
-【太子·紫英】这是当然。今年是RC历6 × 13 = 78年，有着“耶稣的诅咒”之称的，第6个轮回之年。
+【太子·紫英】这是当然。今年是有着“耶稣的诅咒”之称的……
+
+RC历6 × 13 = 78年，第6个轮回之年。（与<font color="purple">第二幕、第四幕</font>时间相同。是<font color="red">第一幕、第三幕</font>的13年后）
 
 【皇帝·夜】那你们可知道，13年前，也就是第5个轮回之年，在这一模一样的帝都，一模一样的天国广场上，发生过一模一样的事情？
 
 【第二皇子·木】！！陛下说的，难道是那时候的天国“广场事件”？
 
-【太子·紫英】（右手托着下巴，思考片刻后）的确很像，同样是丞相去世，同样是天国广场上的纪念与抗议，同样是身为继承人的太子被诬陷为“幕后黑手”……
+【太子·紫英】（右手托着下巴）这么一说……的确很像。同样是丞相去世，同样是天国广场上的纪念与抗议，同样是太子被诬陷为“幕后黑手”……
 
-【皇帝·夜】（笑）不过，好像还是有稍许不同吧。 毕竟，13年前的苹皇后嚣张跋扈，13年前的沧白元帅尚在人世，而13年前的我，就站在……（将右手指向太子·紫英）你的位置上。
+【皇帝·夜】（笑）不过，好像还是有稍许不同吧。 毕竟，13年前的苹皇后嚣张跋扈，13年前的沧白元帅尚在人世。
+
+而13年前的我，就站在……（将右手指向太子·紫英）你的位置上。
 
 （画面定格在皇帝·夜用手指向太子·紫英的这一刻，帷幕徐徐落下）
 </p>
@@ -570,11 +597,11 @@
 <font color="red">第六幕</font>
 一切阻止轮回的努力，终将成为下一次轮回。
 
-地点：帝都宫殿内
+地点：帝都·大殿内
 时间：1周目，RC历5 × 13 = 65年，与<font color="red">第一幕、第三幕</font>相同
 
 
-（时间回到13年前，此时身为太子的夜，站在上一幕落幕时紫英所站的位置，而皇帝·曦，站在上一幕落幕时夜所站之处。
+（时间回到13年前，此时身为太子的夜，站在上一幕落幕时紫英所站的位置，而皇帝·曦，站在上一幕落幕时皇帝·夜所站之处。
 
 皇帝·曦将右手指向太子·夜，与上一幕谢幕时的画面相同。
 
@@ -582,19 +609,21 @@
 
 【皇帝·曦】（声音有些颤抖）连你……也要背叛朕吗？
 
-【太子·夜】（不知所措）在下究竟做错了什么？
+【太子·夜】（不知所措）我究竟做了……做错了什么？
 
-【皇后·苹】天国广场如今的动乱，幕后黑手就是你，夜。
+【皇后·苹】天国广场如今的动乱，幕后黑手就是你，夜！
 
 【太子·夜】不不，在下绝非幕后指使！（面朝皇帝·曦）请陛下相信在下的忠心。
 
-【皇后·苹】还敢狡辩！那群动乱分子公开叫嚣，要皇上赶紧退位，好让太子早点登基。这话没有你太子的指使，会有人敢讲吗？
+【皇后·苹】还敢狡辩！那群动乱分子公开叫嚣，要皇上赶紧退位，好让太子早点登基。这话没有你夜太子的指使，会有人敢讲吗？
 
 【皇帝·曦】夜儿，你……太让朕失望了。
 
+（此时，元帅·沧白站了出来）
+
 【元帅·沧白】陛下，此事恐怕还需要深入调查。
 
-【皇后·苹】还用得着调查吗？太子对皇上阳奉阴违也不是一次两次了吧。
+【皇后·苹】（死死瞪着元帅·沧白，怒吼）还用得着调查吗？夜对皇上阳奉阴违，也不是一次两次了吧。
 
 我们天国王朝的理想，是消灭这世间的不公，实现人与人的真正平等。
 
@@ -604,7 +633,7 @@
 
 总而言之，夜代表的，是富人阶层的利益，皇上的天国，不能交到这样的人手里。
 
-【皇帝·曦】苹儿，天国广场上的暴徒，必须……果断镇压。这件事，就……交给你处理了。
+【皇帝·曦】（声音已十分虚弱）苹儿……天国广场上……那些暴徒，必须……果断镇压。就…交给你…处理了。
 
 【皇后·苹】臣妾遵旨！
 
@@ -612,13 +641,13 @@
 
 （从幕后上来几名侍卫）
 
-【皇帝·曦】（右手指向太子·夜，声音有些微弱）从今日起，夜……不再是太子。
+【皇帝·曦】（右手颤抖地指向太子·夜，声音微弱地）从今……今日起，夜……废为庶人。
 
-你们，把夜……押回东宫，好生看管，今后……没有朕的允许，不得……出东宫一步。
+你们，把夜……押回东宫，好生看管。今后……没有朕的允许，不得……出东宫一步。
 
 【众侍卫】遵旨。（一起走到夜的身边，两人拽着夜的胳膊）走！
 
-【太子·夜】（被众侍卫拽着朝舞台下走去）陛下！在下知错！请陛下给在下一次机会！
+【原太子·夜】（被众侍卫拽着朝舞台下走去）陛下！在下知错！请陛下给在下一次机会！
 
 【元帅·沧白】（上前一步）陛下，太子废立乃国之大事，望陛下三思。
 
@@ -632,9 +661,9 @@
 
 （众人一同将皇帝·曦扶起）
 
-【皇帝·曦】（看着第二皇子·金）如今看来…人心……终究不在朕这边呐……今后的天国，就交给你了…金。
+【皇帝·曦】（看着第二皇子·金）如今看来…人心……终究不在…朕这边呐。今后的天国，就交给你了…金。
 
-有困难，可以找…皇后帮忙。望你二人……携手…………重………建…………天………………国……………………（缓缓合上双眼）
+有困难，可以找…皇后帮忙。望你二人……携手………重……………建………………天…………………国……………………（缓缓合上双眼）
 
 （落幕）
 
@@ -659,11 +688,11 @@
 
 【？？】慢着！
 
-【第二皇子·金】（紧张）来者何人？
+【第二皇子·金】（警惕）来者何人？
 
 （皇后·苹登场，三位贵族紧随其后）
 
-【第二皇子·金】原来是你，天国的幽灵。多日不见，别来无恙啊，皇后娘娘。
+【第二皇子·金】原来是你，天国的幽灵。多日不见，别来无恙啊，前皇后娘娘。
 
 【贵族·甲】现在是皇太后了。
 
@@ -689,7 +718,7 @@
 
 【皇后·苹】（指着元帅·沧白）你不是被先皇……
 
-【元帅·沧白】奉新任太子之命，官复原职，捉拿先皇皇后·苹及其党羽。
+【元帅·沧白】奉金皇子之命，官复原职，捉拿先皇皇后·苹及其党羽。
 
 【皇后·苹】（愤怒）你们……先皇尸骨未寒，你们竟然造反！
 
@@ -719,7 +748,7 @@
 
 【第二皇子·金】原来是你（苦笑，仰天长叹）想不到我机关算尽，也算不到今日刚出虎穴，又入狼窝。
 
-（面对元帅）为什么？（右手食指指向夜）这家伙，给了你多少好处？
+（面对元帅，愤怒而悲伤）为什么……为什么要背叛朕？（右手食指指向夜）这家伙，给了你多少好处？
 
 【元帅·沧白】（摇摇头）与这无关。老臣只是觉得，依照先皇的原则办事，只能令天下徒增伤亡。
 
@@ -751,7 +780,7 @@
 
 【元帅·沧白】（摇摇头）然而总是有一些人，比其他人更“平等”。比如那些被曦皇提拔起来的新贵族，再比如苹皇后…以及曦皇自己。
 
-【第二皇子·金】那不一样！曦皇说过，就算他什么也不做，世间的财富，也会不可避免地朝着少数人手里集中。
+【第二皇子·金】那不一样！曦皇说过，世间的财富，在“马太效应”下会不可避免地朝着少数人手里集中。
 
 自私自利的个体，在物竞天择的世界里更容易生存；自由竞争的无形之手，终究会败给古老的集权博弈论。
 
@@ -763,7 +792,7 @@
 
 我们的国家，已经背负着这样的诅咒，走过了千年的岁月。
 
-曦皇，不惜逆天而行，垄断社会资源的分配，
+所以曦皇，不惜逆天而行，垄断社会资源的分配，
 
 是为了不让天国再次陷入贫者愈贫，富者愈富的轮回；
 
@@ -791,11 +820,11 @@
 
 【第二皇子·金】你们这些话，对着我说有什么用？有本事，在曦皇在世的时候冲着他说啊！
 
-还有，别自以为是了，这是个弱肉强食的世界，今日我与这龙椅无缘，跟天下的人心向背毫无关系！
+还有，别自以为是了，这是个弱肉强食的世界，今日朕……我与这龙椅无缘，跟天下的人心向背毫无关系！
 
 （指着元帅·沧白，看着夜）既然军队已效忠于你们，那我再多说无益。（第二皇子·金朝舞台下走去）
 
-【元帅·沧白】（朝着夜）太子，不，应该是皇帝陛下了，请吧（右手伸向龙椅一方，摆出“请入座”的手势）
+【元帅·沧白】（朝着夜，鞠躬）太子……不，应该是皇帝陛下了，请吧（右手伸向龙椅一方，摆出“请入座”的手势）
 
 （夜走向龙椅，但并未坐下，而是转身朝向元帅）
 
@@ -829,7 +858,7 @@
 
 【原太子·夜】元帅，保重。
 
-【元帅·沧白】（正欲朝舞台下走去，突然想起了什么，回头看着夜）陛下刚才所说的约定里，似乎……少了一些吧。
+【元帅·沧白】（正欲朝舞台下走去，突然想起了什么，回头看着夜）陛下刚才所说的约定里，似乎……漏掉了一些内容吧。
 
 【原太子·夜】嗯？愿闻其详。
 
@@ -848,10 +877,10 @@
 
 
 <font color="purple">第八幕（终章）</font>
-这个的故事永不结束，因为“你”，仍在天国的世界里，一次一次地轮回。
+天国的故事永不结束，因为“你”，仍在这个世界里，一次一次地轮回。
 
 
-地点：帝都宫殿内
+地点：帝都·大殿内
 时间：2周目，RC历6 × 13 = 78年，与<font color="purple">第二幕、第四幕、第五幕</font>相同
 
 （时间回到13年后，舞台上有太子·紫英，皇帝·夜，第二皇子·木。皇帝·夜站在与上一幕末尾相同的位置。）
@@ -888,7 +917,7 @@
 
 朝廷这只看得见的手，一次又一次地被官僚和贵族们用来交易，他们利用手中的特权，与商人们相互勾结，狼狈为奸。
 
-父皇，学生们如今的绝食行动是一次契机。我们可以借此机会，完善天国的法制，限制官僚与贵族的特权。
+陛下，学生们如今的绝食行动是一次契机。我们可以借此机会，完善天国的法制，限制官僚与贵族的特权。
 
 打造一个真正公平的环境，让那些贫困阶层的人，能够不依靠权力寻租，而是靠自己的智慧与双手勤劳致富。
 
@@ -896,7 +925,7 @@
 
 【第二皇子·木】等等，陛下难道忘了么……公民大会召开在即。
 
-【皇帝·夜】 ？！你不说朕还真差点忘了。
+【皇帝·夜】 ！！你不说，朕还真差点忘了。
 
 【第二皇子·木】按照宪法的规定，陛下必须服从公民大会的决议。如果我们现在不采取果断行动，等到大会推翻了陛下的……
 
@@ -950,13 +979,13 @@
 
 【皇帝·夜】你是想说……那个傀儡皇帝变法的事？
 
-【太子·紫英】不错，当年的帝国与大和国的战争失利，正处于风雨飘摇之际。
+【太子·紫英】不错，陛下可还记得，当年的帝国与东瀛国的战争失利，正处于风雨飘摇之际。
 
-那时候的皇帝一腔热血，以变法的方式引入外来文明，试图拯救我们这个古老而落后的民族。
+那时候的皇帝一腔热血，以变法的方式引入先进文明，试图拯救我们这个古老而落后的民族。
 
-可这次变法的人却被当年真正掌握权力的皇太后视为“叛党”、“敌国邪恶势力”而加以阻挠。
+可那次变法，却被当年真正掌握权力的皇太后视为“敌国邪恶势力”而加以阻挠。
 
-最终，变法派有的惨遭杀戮，有的流亡海外，皇帝本人也被软禁，直至去世。
+最终，变法派被视为“叛党”，有的惨遭杀戮，有的流亡海外，皇帝本人也被软禁，直至去世。
 
 这次流血事件彻底伤了改良派的心，越来越多的仁人志士们转而投身革命。
 
@@ -970,39 +999,45 @@
 
 倘若夜皇陛下，今日也像当初那位皇太后一样，执意以铲除“敌国邪恶势力”为名，用武力解决问题，就不怕未来引发更大的动乱吗？
 
-【皇帝·夜】朕就接着这段轮回的历史来回答吧。 
+【皇帝·夜】那朕，就接着这段轮回的历史来回答吧。 
 
-帝制崩溃，进入共和时代以后，我们的国家并没有变得更强大，反而化作一盘散沙。
+帝制崩溃，进入RC历共和时代以后，我们的国家并没有变得更强大，反而化作一盘散沙。
 
 军阀割据，群雄逐鹿，生灵涂炭，田地荒芜。昔日泱泱帝国彻底沦为战国，周边各国亦对我国虎视眈眈。
 
 RC历2 × 13 = 26年，曦皇……不，当年他还没有成为皇帝，此时的曦……他领导下的军队，已被其一生的对手逼至绝境。
 
-恰在此时，大和国再次犯我国境。很快，大半国土落入敌手，在同一年的冬天，都城沦陷，30万平民惨遭屠戮。我国与大和国彻底进入全面战争。
+恰在此时，东瀛国再次犯我国境。很快，大半国土落入敌手，在同一年的冬天，都城沦陷，城内30万平民惨遭屠戮。我国与东瀛国彻底进入全面战争。
 
-讽刺的是，大和国的入侵客观上拯救了曦，此后曦与他的对手暂时联手，彻底击败大和国。而曦也借此机会积蓄力量，并在击败大和国后再次与对手交战。
+讽刺的是，东瀛国的入侵客观上拯救了曦，曦的对手决定与曦暂时联手，彻底击败东瀛国。
+
+而曦也借此机会积蓄力量，并在击败东瀛国后再次与对手交战。
 
 13年后，也就是RC历3 × 13 = 39年，这一次，曦…已成为这个天国的皇帝，并将他一生的对手逼至了南方小岛上。
 
-然而此时，边境地带再次爆发战争，星条国——当年与我们一起并肩作战抵御大和国侵略的国家，这次却成为了侵略者。
+然而此时，边境地带再次爆发战争，星条国——当年与我们一起并肩作战抵御东瀛国侵略的国家，这次却成为了侵略者。
 
-曦皇当机立断，力排众议，派遣军队与星条国交战。这也让南方小岛上的对手朝廷得以喘息，生存至今。
+曦皇当机立断，力排众议，派遣军队与星条国交战。
 
 这两次大战，史称《战国的轮回》。
 
-但与13年前大和国之战时国土大半沦丧不同，这次尽管天国正处于战后百废待兴的境地，尽管是与全世界最强的星条国交手，
+虽然这个决定让南方小岛上的对手朝廷得以喘息，生存至今。
 
-天国也丝毫不落下风，并最终将侵略者逼退至国境线以外，取得了战略意义上的胜利。
+但与13年前与东瀛国交战时国土大半沦丧不同，这次尽管天国正处于战后百废待兴的境地，尽管是与全世界最强的星条国交手，
+
+天国也丝毫不落下风，并最终将侵略者逼退至国境线以外百余里，取得了战略意义上的胜利。
 
 而这一切的前提，是曦皇本身拥有最大的权威，因此可以举全国之力投入战争。
 
 回到今日之事，朕不惜动用军队，也要尽早平息动乱，正是为了维护朕继承自曦皇陛下的权威。一个没有权威的天国，是没有未来的。
 
-【太子·紫英】不……不是的。陛下难道忘了吗？当年沧白元帅之所以愿意让您来继承皇位，并不是因为曦皇的权威，而是因为民心向背。
+【太子·紫英】不是这样的！陛下难道忘了吗？当年沧白元帅之所以愿意让您来继承皇位，并不是因为曦皇的权威，而是因为民心向背。
 
-13年前，也就是RC历5 × 13 = 65年，当年那个受万民拥戴的曦皇陛下，为了追求不切实际的梦想而民心尽失。
+13年前，当年那个曾受万民拥戴的曦皇陛下，为了追求不切实际的梦想而民心尽失。
 
-为什么当年百姓自发十里长街送丞相，为什么天国广场上摆满了纪念丞相的花圈？为什么抗议人群会喊出诸如“请曦皇退位，让太子·夜赶紧登基”这样的口号出现？
+为什么当年百姓自发十里长街送丞相，为什么天国广场上摆满了纪念丞相的花圈？
+
+为什么抗议人群中有诸如“请曦皇退位，让太子·夜赶紧登基”这样的口号出现？
 
 那是因为丞相深得民心，大家都相信，继承丞相遗志的您，能够带领大家，走出曦皇陛下的阴影。
 
@@ -1020,11 +1055,13 @@ RC历2 × 13 = 26年，曦皇……不，当年他还没有成为皇帝，此时
 
 【太子·紫英】那如果……调查的结果是并不存在所谓的“外国敌对势力”呢？
 
-【皇帝·夜】如果真是那样……（闭眼沉默一段时间后）那就让这段历史，在下一代人的记忆中彻底消失。
+【皇帝·夜】如果真是那样……（闭眼沉默一段时间后）那就让这段历史，在下一代人的记忆中，彻底消失。
 
-【太子·紫英】（苦笑）真是不得了的刑罚。
+【太子·紫英】记忆封印么？（苦笑）真是不得了的刑罚。
 
-【皇帝·夜】朕已经命令你，镇压此次暴乱。若是今日你抗旨不遵，朕的皇冠，恐怕需要重新考虑一下未来的主人。
+想必未来会有人以某种特殊的方式，记录下这段《天国的轮回》的历史。并在将来的某一天，以小说，或者剧本的形式，公之于众吧。
+
+【皇帝·夜】朕已经命令你，镇压此次暴乱。若是今日你抗旨不遵，那朕的皇冠……
 
 【太子·紫英】这滴血的皇冠，不要也罢。我今日抗旨，是要让天下人铭记：
 
@@ -1044,11 +1081,13 @@ RC历2 × 13 = 26年，曦皇……不，当年他还没有成为皇帝，此时
 
 （众侍卫登场）
 
-【皇帝·夜】（右手指向紫英）从今日起，紫英不再是太子。你们，把紫英押回东宫，好生看管，今后没有朕的允许，不得跨出东宫一步。
+【皇帝·夜】（右手指向紫英）从今日起，紫英……废为庶人。你们，把紫英押回东宫，好生看管，今后没有朕的允许，不得跨出东宫一步。
 
 【众侍卫】遵…遵旨！（众人面面相觑，犹豫片刻后，为首的一名侍卫走到紫英跟前）紫英殿下，请吧。
 
-【太子·紫英】（随几名侍卫向舞台右侧走去）披着天国的外衣，干着魔鬼的勾当。朝廷欠下的血债，不知何时能偿？
+【太子·紫英】（随几名侍卫向舞台右侧走去，边走边念）
+
+披着天国的外衣，干着魔鬼的勾当。今日欠下的血债，不知何时能偿？
 
 一次又一次，历史不停地旋转，唯有铁与血，跳不出这诅咒的轮盘。
 
